# melius-source-code

./: README.md  install.sh  pyproject.toml
.github/workflows/: melius_auto_publish_workflow.yml  melius_github_release_workflow.yml  melius_release_workflow.yml
src/melius/browser/: engine.py
src/melius/cli/: main.py
src/melius/core/: agent.py
src/melius/gateway/: telegram_handler.py
src/melius/models/: provider.py
src/melius/skills/: manager.py
